project page and misc. enhancements, card alignment fix

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,5 +1,5 @@
 .card {
-  width: 50%;
+  width: 60%;
   margin: 0 auto 35px;
 }
 
